--- a/.npmignore
+++ b/.npmignore
@@ -11,7 +11,6 @@ scripts/
 
 # Exclude Git-related files
 .git/
-.gitignore
 
 # Exclude node_modules (not necessary but good practice)
 node_modules/
@@ -19,5 +18,6 @@ node_modules/
 # Exclude npm debug files
 npm-debug.log
 
+# OS generated files
 .DS_Store
 .DS_Store?
