--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://typeswift.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TypeSwift/SwiftGen.git"
+    "url": "git+https://github.com/TypeSwift/SwiftGen.git"
   },
   "license": "MIT",
   "dependencies": {
