--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiftgen",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Generate typesafe Swift code using input TypeScript code.",
   "main": "dist/swiftgen.js",
   "scripts": {
@@ -9,7 +9,13 @@
     "copy-tests": "cpx \"tests/**/*\" \"dist/tests/\" --verbose",
     "start": "node dist/swiftgen.js"
   },
-  "keywords": [],
+  "files": [
+    "dist",
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": ["swift", "typescript", "codegen"],
   "author": {
     "name": "Justin Bush",
     "email": "buzsh@users.noreply.github.com",
