refactor: config debug conditional statement

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,5 +3,6 @@
   "outputDir": "output",
   "outputPrefix": "",
   "outputSuffix": ".swift",
-  "outputFileName": "TypeSwift"
+  "outputFileName": "TypeSwift",
+  "debug": false
 }
